Added some libraries so that tests run under OSX 10.5 with SoyLatte.

--- a/build.xml
+++ b/build.xml
@@ -20,6 +20,9 @@
 		otherwise Java will use the old (and broken) built in version.
 	-->
 	<scriptdef name="rhinounit" src="lib/rhino-unit/rhinoUnitAnt.js" language="javascript">
+		<classpath>
+			<path refid="js.lib"/>
+		</classpath>
 		<attribute name="options"/>
 		<attribute name="ignoredglobalvars"/>
 		<attribute name="haltOnFirstFailure"/>
